# cer-tool

./: .gitignore  README.md  cer-tool.paths  cer-tool.ps1  cer-tool.sh  config.py  file_mgmt.py  grading_sheet.py  main.py  paths.config  pyproject.toml  util.py
config/: config.json
src/: command_handlers.py  commands.py  config.py  file_mgmt.py  grading_sheet.py  main.py  pex_grading.py  util.py
src/cer_tool/: command_handlers.py  config.py  config.schema.json  file_mgmt.py  flags.py  grading_sheet.py  main.py  pex_grading.py  util.py
